--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -2,5 +2,6 @@ apply plugin: 'java'
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-
+    compile project(':commom')
+    compile project(':model')
 }
